test for chess board

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+    <div class="wrap">
+        <div class="board">
+            <div class="cell"></div>
+        </div>
+    </div>
     
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
