--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 
     <div class="wrap">
         <div class="board">
+            <div class="cell">
+                <div class="circle"></div>
+            </div>
+            <div class="cell">
+                <div class="cross"></div>
+            </div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
             <div class="cell"></div>
         </div>
     </div>
