--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
     <input type="text" id="board-dimension">
     <div class="wrap">
         <div class="board">
-            <div class="cell">
-                <div class="circle"></div>
-            </div>
-            <div class="cell">
-                <div class="cross"></div>
-            </div>
+            <div class="cell"></div>
+            <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
