table size can be adjusted

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <input type="text" id="board-dimension">
+    <input type="text" id="board-dimension" placeholder="3">
     <div class="wrap">
         <div class="board">
             
