--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="button" value="RESET" class="reset-button">
         </div>
         
-        <div class="record">
+        <div class="record-panel">
             <div class="player-o">
                 <h2>O SCORE</h2>
                 <p>0</p>
