--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <main>
         <div class="control-panel">
             <div class="controler">
-                <p>Table Size</p>
-                <input type="text" id="board-dimension" value="3">
+                <p>TABLE SIZE</p>
+                <input type="text" class="input-box" id="board-dimension" value="3">
+                <input type="range" class="slider" id="board-size-bar" min="2" max="11" step="1" value="3">
             </div>
         </div>
 
