--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <main>
         <div class="control-panel">
             <div class="controler">
-                <p>TABLE SIZE</p>
+                <p>TABLE DIMENSION</p>
                 <input type="text" class="input-box" id="board-dimension" value="3">
-                <input type="range" class="slider" id="board-size-bar" min="2" max="11" step="1" value="3">
+                <input type="range" class="slider" id="board-size-bar" min="2" max="15" step="1" value="3">
+            </div>
+            <div class="controler">
+                <p>TABLE SIZE (vw)</p>
+                <input type="text" class="input-box" id="board-size" value="33">
+                <input type="range" class="slider" min="0" max="100" step="1" value="33">
             </div>
         </div>
 
