dynamic change gaming board

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="controler">
                 <p>TABLE SIZE (vw)</p>
                 <input type="text" class="input-box" id="board-size" value="33">
-                <input type="range" class="slider" min="0" max="100" step="1" value="33">
+                <input type="range" class="slider" min="1" max="100" step="1" value="33">
             </div>
         </div>
 
         <div class="wrap">
-            <div class="board">
-            </div>
+            <!-- <div class="board">
+            </div> -->
             <audio id="click" src="http://soundbible.com/mp3/Click2-Sebastian-759472264.mp3" autoplay="false"></audio>
             <input type="button" value="RESET" class="reset-button">
         </div>
